--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<li><a href="contact me.html">contact me</a></li>
 	  </ul>
 	<h2> 
-		<iframe width="560" height="315" src="https://github.com/jalrokaya/jalrokaya" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<src="https://github.com/jalrokaya/jalrokaya" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		
 </body>
 </html>
