Corrected the html format

--- a/about me.html
+++ b/about me.html
@@ -1,4 +1,4 @@
-0<!DOCTYPE html> 
+<!DOCTYPE html> 
 
 <html>
   <head>
@@ -47,5 +47,5 @@
 </div>
 </div>
  <a href="index.html"><button>Back to Home</button></a>
- </head>
+ </body>
  </html>
