--- a/language skill.html
+++ b/language skill.html
@@ -1,14 +1,17 @@
 <div class="section">
 <h1><span>My Skills</span></h1>
 <ul>
-<li>HTML <br />
+<li>HTML/CSS <br />
 <progress min="0" max="100" value="80"></progress>
-</li>
-<li>JavaScript <br />
-<progress min="0" max="100" value="50"></progress>
 </li>
 <li>Python <br />
 <progress min="0" max="100" value="30"></progress>
+</li>  
+<li>ABAP<br />
+<progress min="0" max="100" value="80"></progress>
+</li>
+<li>Java<br />
+<progress min="0" max="100" value="50"></progress>
 </li>
 </ul>
 </div>
